--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -16,13 +16,11 @@
 
 .header h1 {
   font-size: 4rem;
-  min-height: 36.25rem;
   min-width: 25rem;
   text-transform: uppercase;
   font-size: 1.5rem;
   color: rgba(255,255,255,0.8);
   line-height: 1;
-  margin: 0 0 0.125em;
   letter-spacing: 0.01em;
   text-align: center;
   padding-top: 2rem;
@@ -123,7 +121,8 @@
   transform: translate(-50%, -50%);
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
   width: 200px;
-  height: 28px
+  height: 28px;
+  color: #fff;
 }
 
 .footer {
