--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -9,6 +9,89 @@
   z-index: 10;
 }
 
+@keyframes animate {
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 10%;
+  }
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 60%;
+  }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #002;
+  overflow: hidden;
+}
+
+.background li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 19s linear infinite;
+}
+
+.background li:nth-child(0) {
+  left: 15%;
+  width: 153px;
+  height: 153px;
+  bottom: -153px;
+  animation-delay: 1s;
+}
+
+.background li:nth-child(1) {
+  left: 7%;
+  width: 141px;
+  height: 141px;
+  bottom: -141px;
+  animation-delay: 4s;
+}
+
+.background li:nth-child(2) {
+  left: 55%;
+  width: 118px;
+  height: 118px;
+  bottom: -118px;
+  animation-delay: 5s;
+}
+
+.background li:nth-child(3) {
+  left: 9%;
+  width: 87px;
+  height: 87px;
+  bottom: -87px;
+  animation-delay: 11s;
+}
+
+.background li:nth-child(4) {
+  left: 46%;
+  width: 115px;
+  height: 115px;
+  bottom: -115px;
+  animation-delay: 10s;
+}
+
+.background li:nth-child(5) {
+  left: 25%;
+  width: 78px;
+  height: 78px;
+  bottom: -78px;
+  animation-delay: 10s;
+}
+
 .pageForm {
   display: flex;
   background: #002;
