--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  background: #002;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -12,5 +13,5 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
