binary-to-decimal: ajuste do footer.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -218,6 +218,8 @@
 }
 
 .footer {
+  position: absolute; bottom: 1rem;
+  width: 100%;
   background: #262643;
   min-height: 2rem;
   text-align: center;
