--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -139,8 +139,10 @@
 .titleInput {
   display: block;
   font-size: 35px;
-  text-shadow: 2px 2px #c9c9c9;
-  background-color: rgb(80, 159, 233);
+  color: rgba(255,255,255,0.8);
+  line-height: 1;
+  letter-spacing: 0.01em;
+  background-color: #262643;
   width: 100%;
   height: 55px;
   margin: 0;
@@ -189,8 +191,10 @@
   font-size: 20px;
   display: block;
   font-size: 35px;
-  text-shadow: 2px 2px #c9c9c9;
-  background-color: rgb(80, 159, 233);
+  color: rgba(255,255,255,0.8);
+  line-height: 1;
+  letter-spacing: 0.01em;
+  background-color: #262643;
   width: 100%;
   height: 55px;
   margin: 0;
