--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -7,6 +7,20 @@
   height: 80px;
   position: relative;
   z-index: 10;
+
+  h1 {
+    margin-top: unset;
+    font-size: 4rem;
+    min-width: 25rem;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, 0.8);
+    line-height: 1;
+    letter-spacing: 0.01em;
+    text-align: center;
+    padding-top: 2rem;
+    font-weight: bold;
+  }
 }
 
 @keyframes animate {
@@ -32,83 +46,70 @@
   padding: 0;
   background: #002;
   overflow: hidden;
-}
 
-.background li {
-  position: absolute;
-  display: block;
-  list-style: none;
-  width: 20px;
-  height: 20px;
-  background: rgba(255, 255, 255, 0.2);
-  animation: animate 19s linear infinite;
-}
-
-.background li:nth-child(0) {
-  left: 15%;
-  width: 153px;
-  height: 153px;
-  bottom: -153px;
-  animation-delay: 1s;
-}
-
-.background li:nth-child(1) {
-  left: 7%;
-  width: 141px;
-  height: 141px;
-  bottom: -141px;
-  animation-delay: 4s;
-}
-
-.background li:nth-child(2) {
-  left: 55%;
-  width: 118px;
-  height: 118px;
-  bottom: -118px;
-  animation-delay: 5s;
-}
-
-.background li:nth-child(3) {
-  left: 9%;
-  width: 87px;
-  height: 87px;
-  bottom: -87px;
-  animation-delay: 11s;
-}
-
-.background li:nth-child(4) {
-  left: 46%;
-  width: 115px;
-  height: 115px;
-  bottom: -115px;
-  animation-delay: 10s;
-}
-
-.background li:nth-child(5) {
-  left: 25%;
-  width: 78px;
-  height: 78px;
-  bottom: -78px;
-  animation-delay: 10s;
+  li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    margin-left: 15%;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 19s linear infinite;
+  }
+  
+  li:nth-child(0) {
+    left: 15%;
+    width: 153px;
+    height: 153px;
+    bottom: -153px;
+    animation-delay: 1s;
+  }
+  
+  li:nth-child(1) {
+    left: 7%;
+    width: 141px;
+    height: 141px;
+    bottom: -141px;
+    animation-delay: 4s;
+  }
+  
+  li:nth-child(2) {
+    left: 55%;
+    width: 118px;
+    height: 118px;
+    bottom: -118px;
+    animation-delay: 5s;
+  }
+  
+  li:nth-child(3) {
+    left: 9%;
+    width: 87px;
+    height: 87px;
+    bottom: -87px;
+    animation-delay: 11s;
+  }
+  
+  li:nth-child(4) {
+    left: 46%;
+    width: 115px;
+    height: 115px;
+    bottom: -115px;
+    animation-delay: 10s;
+  }
+  
+  li:nth-child(5) {
+    left: 25%;
+    width: 78px;
+    height: 78px;
+    bottom: -78px;
+    animation-delay: 10s;
+  }
 }
 
 .pageForm {
   display: flex;
   background: #002;
-}
-
-.header h1 {
-  margin-top: unset;
-  font-size: 4rem;
-  min-width: 25rem;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  color: rgba(255, 255, 255, 0.8);
-  line-height: 1;
-  letter-spacing: 0.01em;
-  text-align: center;
-  padding-top: 2rem;
-  font-weight: bold;
 }
 
 .formulario {
@@ -124,53 +125,36 @@
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  margin-top: 220px;
+  margin-top: 120px;
 }
 
 .binaryImput {
   position: absolute;
-  display: block;
+  display: flexbox;
   margin: 0;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  margin-top: 10%;
-}
+  margin-top: 25px;
 
-.titleInput {
-  display: block;
-  font-size: 35px;
-  color: rgba(255,255,255,0.8);
-  line-height: 1;
-  letter-spacing: 0.01em;
-  background-color: #262643;
-  width: 100%;
-  height: 55px;
-  margin: 0;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  margin-top: 40px;
-  padding-top: 5px;
-}
+  input {
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 20px;
+    margin-top: 38px;
+    width: 200px;
+    height: 28px
+  }
 
-.binaryImput input {
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 20px;
-  margin-top: 38px;
-  width: 200px;
-  height: 28px
-}
-
-.binaryImput button {
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 20px;
-  width: 150px;
-  height: 35px;
-  margin-top: 10px;
-  background-color: rgb(245, 240, 240);
+  button {
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 20px;
+    width: 150px;
+    height: 35px;
+    margin-top: 10px;
+    background-color: rgb(245, 240, 240);
+  }
 }
 
 .decimalOutput {
@@ -184,42 +168,37 @@
   margin-right: -50%;
   transform: translate(-50%, -50%);
   margin-top: 50px;
+
+  input {
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 20px;
+    position: absolute;
+    display: block;
+    margin: 0;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 28px;
+    color: #fff;
+    text-align: center;
+  }
 }
 
-.titleOutput {
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 20px;
+.titleText {
   display: block;
-  font-size: 35px;
+  font-size: 2rem;
   color: rgba(255,255,255,0.8);
-  line-height: 1;
+  line-height: 3rem;
   letter-spacing: 0.01em;
   background-color: #262643;
   width: 100%;
   height: 55px;
-  margin: 0;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  margin-top: 40%;
+  margin-top: 40px;
   padding-top: 5px;
-}
-
-.decimalOutput input {
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 20px;
-  position: absolute;
-  display: block;
-  margin: 0;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  width: 200px;
-  height: 28px;
-  color: #fff;
-  text-align: center;
+  text-transform: uppercase;
+  margin-top: 150px;
 }
 
 .footer {
